tests/solidity-semantic-tests/out/errors/named_error_args/C.clear.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/named_error_args.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
